fixed contrast

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 body {
     padding: 0;
     margin: 0;
+    color:white;
 }
 .snowfall-background {
     background-color: #343a40;; /* Example color, change as needed */
